--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</head>
 	<body onload="tabelas()">
 		<p> Ola Mundo </p>
+		<p>Logs</p>
 		<nav class="navbar navbar-expand-sm bg-light navbar-light">
 		  <ul class="navbar-nav">
 			<li class="nav-item active">
